--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileFragment">
-
-
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PROFILE FRAGMENT"
+        android:text="Home Fragment"
+        android:textSize="30sp"
         android:layout_centerInParent="true"
-        android:textSize="30sp"/>
-
+        android:textColor="@color/lavender"/>
 </RelativeLayout>
