--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,9 +18,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/lavender"
+            android:background="@color/black"
             android:elevation="4dp"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <FrameLayout
@@ -29,41 +27,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-
-
-
-
-
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
-
-
-
             <com.google.android.material.bottomappbar.BottomAppBar
+                android:id="@+id/bottomAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/bottomAppBar"
                 android:layout_gravity="bottom"
-                app:fabCradleMargin="10dp"
-                app:fabCradleRoundedCornerRadius="50dp"/>
+                app:theme="@style/Theme.MaterialComponents"/>
+
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/bottom_navigation"
                 app:labelVisibilityMode="labeled"
                 app:menu="@menu/bottom_navigation_menu"
-                android:background="@android:color/transparent"
-                />
+                android:layout_gravity="bottom"
+            android:background="@android:color/transparent"
+            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"/>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
     </RelativeLayout>
-
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
