--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,18 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.NavigationDrawer" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">@color/black</item>
-    </style>
+    <resources xmlns:tools="http://schemas.android.com/tools">
+        <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
 
-    <style name="Theme.NavigationBottom" parent="Base.Theme.X"/>
-
-    <style name="ThemeOverlay.AppCompat.navTheme">
         <item name="colorPrimary">@color/white</item>
-    </style>
-</resources>
+            <item name="colorPrimaryVariant">@color/white</item>
+            <item name="colorOnPrimary">@color/white</item>
+            <item name="colorSecondary">@color/teal_200</item>
+            <item name="colorSecondaryVariant">@color/teal_700</item>
+            <item name="colorOnSecondary">@color/black</item>
+            <item name="android:statusBarColor">@color/black</item>
+        </style>
+
+        <style name="Theme.NavigationBottom" parent="Base.Theme.X"/>
+
+        <style name="ThemeOverlay.AppCompat.navTheme">
+            <item name="colorPrimary">@color/white</item>
+        </style>
+    </resources>
