--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,9 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/black"
             android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:menu="@menu/toolbar_menu" />
+
 
         <FrameLayout
             android:id="@+id/fragment_container"
@@ -31,12 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.google.android.material.bottomappbar.BottomAppBar
-                android:id="@+id/bottomAppBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                app:theme="@style/Theme.MaterialComponents"/>
+
 
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -46,8 +43,10 @@
                 app:labelVisibilityMode="labeled"
                 app:menu="@menu/bottom_navigation_menu"
                 android:layout_gravity="bottom"
-            android:background="@android:color/transparent"
-            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"/>
+                android:background="@android:color/transparent"
+                app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+                android:theme="@style/CardView.Dark"
+                app:itemIconTint="@color/black"/>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
