--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -10,6 +10,11 @@
         android:icon="@drawable/baseline_search_24"/>
 
     <item android:title=""
+        android:id="@+id/nav_comm"
+        android:icon="@drawable/baseline_people_outline_24"/>
+
+
+    <item android:title=""
         android:id="@+id/nav_notification"
         android:icon="@drawable/baseline_notifications_24"/>
 
