--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,7 +7,9 @@
             <item name="colorSecondary">@color/teal_200</item>
             <item name="colorSecondaryVariant">@color/teal_700</item>
             <item name="colorOnSecondary">@color/black</item>
-            <item name="android:statusBarColor">@color/black</item>
+            <item name="windowActionBar">false</item>
+            <item name="windowNoTitle">true</item>
+            <item name="android:statusBarColor">@color/white</item>
         </style>
 
         <style name="Theme.NavigationBottom" parent="Base.Theme.X"/>
