I have defined different fragments in ViewPager as it is in twitter and I removed Home Fragment. I also designed the views where the tweets will appear.
I have defined different fragments in ViewPager as it is in twitter and I removed Home Fragment. I also designed the views where the tweets will appear.

--- a/app/src/main/res/layout/costom_image.xml
+++ b/app/src/main/res/layout/costom_image.xml
@@ -4,12 +4,11 @@
     android:layout_height="match_parent">
 
 
-
     <ImageView
-        android:layout_width="match_parent"
+        android:id="@+id/custom_image"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/x1"
-        android:id="@+id/custom_image"/>
+        android:src="@drawable/x4" />
 
 </RelativeLayout>
