--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/cis_toolbar"
-        android:title="x"
+        android:title=""
         app:showAsAction="always"
-        android:actionLayout="@layout/costom_image" />
+        android:icon="@drawable/x4"
+         />
 </menu>
