I was able to put the icon in the Toolbar at the end, I also made a Fragment Page and I solved its display problem in all layouts.
I was able to put the icon in the Toolbar at the end, I also made a Fragment Page and I solved its display problem in all layouts.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,17 @@
             android:layout_height="?attr/actionBarSize"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Light"
-            app:menu="@menu/toolbar_menu" />
+            app:menu="@menu/toolbar_menu">
+
+
+            <ImageView
+                android:id="@+id/tv_header_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/x2"/>
+
+        </androidx.appcompat.widget.Toolbar>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
