--- a/app/src/main/res/layout/fragment_foryou.xml
+++ b/app/src/main/res/layout/fragment_foryou.xml
@@ -6,7 +6,7 @@
     tools:context=".ForyouFragment">
 
 
-    <TextView
+   <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="FOR YOU "
